lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:1: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
return(getSol(3),getSol(5))
             ^Lander:1: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
return(getSol(3),getSol(5))
                       ^